clusters/pk3s/atuin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: atuin
  labels:
    app: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atuin
  template:
    metadata:
      labels:
        app: atuin
    spec:
      containers:
        - name: atuin
          image: ghcr.io/atuinsh/atuin:18.17.1
          args:
            - start
          ports:
            - containerPort: 8888
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: atuin-config
