clusters/pk3s/atuin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
  labels:
    app: atuin
spec:
  selector:
    app: atuin
  ports:
    - name: http
      port: 8888
      targetPort: 8888
